Add among us nugget to craft raw among us

--- a/src/main/resources/assets/amongus/lang/en_us.json
+++ b/src/main/resources/assets/amongus/lang/en_us.json
@@ -1,5 +1,6 @@
 {
     "item.amongus.raw_among_us": "Raw Among Us",
     "item.amongus.among_us_ingot": "Among Us Ingot",
+    "item.amongus.among_us_nugget": "Among Us Nugget",
     "itemGroup.amongus.amongus": "Among Us"
 }
