Add among us armor

--- a/src/main/resources/assets/amongus/lang/en_us.json
+++ b/src/main/resources/assets/amongus/lang/en_us.json
@@ -3,5 +3,9 @@
     "item.amongus.among_us_ingot": "Among Us Ingot",
     "item.amongus.among_us_nugget": "Among Us Nugget",
     "item.amongus.knife": "Knife",
+    "item.amongus.among_us_helmet": "Among Us Helmet",
+    "item.amongus.among_us_chestplate": "Among Us Chestplate",
+    "item.amongus.among_us_leggings": "Among Us Leggings",
+    "item.amongus.among_us_boots": "Among Us Boots",
     "itemGroup.amongus.amongus": "Among Us"
 }
