Fix entity.amongus.imposter subtitle in en_us lang

--- a/src/main/resources/assets/amongus/lang/en_us.json
+++ b/src/main/resources/assets/amongus/lang/en_us.json
@@ -11,5 +11,6 @@
     "subtitles.amongus.imposter_dead": "Imposter Dies",
     "subtitles.amongus.imposter_hurt": "Imposter Hurt",
     "subtitles.amongus.imposter_step": "Imposter Steps",
+    "entity.amongus.imposter": "Imposter",
     "itemGroup.amongus.amongus": "Among Us"
 }
