Add imposter spawn egg

--- a/src/main/resources/assets/amongus/lang/en_us.json
+++ b/src/main/resources/assets/amongus/lang/en_us.json
@@ -7,6 +7,7 @@
     "item.amongus.among_us_chestplate": "Among Us Chestplate",
     "item.amongus.among_us_leggings": "Among Us Leggings",
     "item.amongus.among_us_boots": "Among Us Boots",
+    "item.amongus.imposter_spawn_egg": "Imposter Spawn Egg",
     "subtitles.amongus.imposter_ambient": "Sabotage Alarm",
     "subtitles.amongus.imposter_dead": "Imposter Dies",
     "subtitles.amongus.imposter_hurt": "Imposter Hurt",
